tidy code up
