# cmd/server/handler/patients/patients.go
@@ -26,7 +26,7 @@ func NewControllerPatients(service patients.Service) *Controller {
 // @Accept json
 // @Produce json
 // @Param patientRequest body models.Patient true "Patient details"
-// @Security ApiKeyAuth
+// @Param TokenPostman header string true "token"
 // @Success 200 {object} web.response "Patient created"
 // @Failure 400 {object} web.errorResponse "Bad request"
 // @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
@@ -41,36 +41,21 @@ func (c *Controller) HandlerCreate() gin.HandlerFunc {
 
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "bad request",
-			// 	"error":   err,
-			// })
 			return
 		}
 		// Procesar la fecha antes de pasarla al servicio
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Error parsing admission date: %v",err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "Error parsing admission date",
-			// 	"error":   err,
-			// })
 			return
 		}
 
 		patient, err := c.service.Create(ctx, patientRequest)
 		if err != nil {
 			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
-			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			// 	"message": "Internal server error",
-			// })
 			return
 		}
 
 		web.Success(ctx, http.StatusOK, patient, "Patient created")
-		// ctx.JSON(http.StatusOK, gin.H{
-		// 	"data":    patient,
-		// 	"message": "Patient created",
-		// })
 
 	}
 }
@@ -96,10 +81,6 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "bad reques: %v",err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "bad request",
-			// 	"error":   err,
-			// })
 			return
 		}
 
@@ -107,18 +88,11 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 		patient, err := c.service.GetByID(ctx, id)
 		if err != nil {
 			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
-			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			// 	"message": "Internal server error",
-			// })
 			return
 		}
 
 
 		web.Success(ctx, http.StatusOK, patient, "Patient found")
-		// ctx.JSON(http.StatusOK, gin.H{
-		// 	"data":    patient,
-		// 	"message": "Patient found",
-		// })
 	}
 }
 
@@ -129,7 +103,7 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to delete
-// @Security ApiKeyAuth
+// @Param TokenPostman header string true "token"
 // @Success 200 {object} web.response "Patient updated"
 // @Failure 400 {object} web.errorResponse "Bad request"
 // @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
@@ -147,19 +121,11 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "bad request: %v",err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "bad request",
-			// 	"error":   err,
-			// })
 			return
 		}
 
 		if err := ctx.Bind(&patientRequest); err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Bad request: %v",err.Error())
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "Bad request",
-			// 	"error":   err.Error(),
-			// })
 			return
 		}
 
@@ -167,17 +133,10 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 		updatedPatient, err := c.service.Update(ctx, patientRequest, id)
 		if err != nil {
 			web.Error(ctx, http.StatusInternalServerError, "Internal server error \n%v",err)
-			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			// 	"message": "Internal server error",
-			// })
 			return
 		}
 
 		web.Success(ctx, http.StatusOK, updatedPatient, "Patient updated")
-		// ctx.JSON(http.StatusOK, gin.H{
-		// 	"data":    updatedPatient,
-		// 	"message": "Patient updated",
-		// })
 	}
 }
 
@@ -188,7 +147,7 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to delete
-// @Security ApiKeyAuth
+// @Param TokenPostman header string true "token"
 // @Success 200 {object} web.response "Patient partially updated"
 // @Failure 400 {object} web.errorResponse "Bad request"
 // @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
@@ -204,38 +163,22 @@ func (c *Controller) HandlerPatch() gin.HandlerFunc {
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "bad request: %v", err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "bad request",
-			// 	"error":   err,
-			// })
 			return
 		}
 
 		var partialUpdates map[string]interface{}
 		if err := ctx.BindJSON(&partialUpdates); err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err.Error())
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "Bad request",
-			// 	"error":   err.Error(),
-			// })
 			return
 		}
 		// Call the service to partially update
 		partiallyUpdatedPatient, err := c.service.Patch(ctx, partialUpdates, id)
 		if err != nil {
 			web.Error(ctx, http.StatusInternalServerError, "Internal server error \n%v",err.Error())
-			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			// 	"message": "Internal server error",
-			// 	"error":   err.Error(),
-			// })
 			return
 		}
 
 		web.Success(ctx, http.StatusOK, partiallyUpdatedPatient, "Patient partially updated")
-		// ctx.JSON(http.StatusOK, gin.H{
-		// 	"data":    partiallyUpdatedPatient,
-		// 	"message": "Patient partially updated",
-		// })
 	}
 }
 
@@ -245,8 +188,8 @@ func (c *Controller) HandlerPatch() gin.HandlerFunc {
 // @Tags Patients
 // @Accept json
 // @Produce json
-// @Security ApiKeyAuth
 // @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to delete
+// @Param TokenPostman header string true "token"
 // @Success 200 {object} web.response "Patient deleted"
 // @Failure 400 {object} web.errorResponse "Bad request"
 // @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
@@ -262,10 +205,6 @@ func (c *Controller) HandlerDelete() gin.HandlerFunc {
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err)
-			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			// 	"message": "bad request",
-			// 	"error":   err,
-			// })
 			return
 		}
 
@@ -273,15 +212,9 @@ func (c *Controller) HandlerDelete() gin.HandlerFunc {
 		err = c.service.Delete(ctx, id)
 		if err != nil {
 			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
-			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			// 	"message": "Internal server error",
-			// })
 			return
 		}
 
 		web.Success(ctx, http.StatusOK, id, "Patient deleted")
-		// ctx.JSON(http.StatusOK, gin.H{
-		// 	"message": "Patient deleted",
-		// })
 	}
 }
